# libtrec

./: CMakeLists.txt  README.md  trec.pc.in
include/: trec_ccmath.h  trec_constants.hh  trec_defines.hh  trec_hits_positions.hh  trec_strip_geometry.hh  trec_system_configure.hh  trec_track.hh  trec_track_coordinates.hh  trec_tracks_reconstruction.hh
src/: trec_ccmath.c  trec_hits_positions.cc  trec_strip_geometry.cc  trec_system_configure.cc  trec_track.cc  trec_track_coordinates.cc  trec_tracks_reconstruction.cc
